box shadow and borders and radius

--- a/layout.html
+++ b/layout.html
@@ -27,7 +27,7 @@
             </div>
             <!--This is in the blue div-->
             <div class="child second">
-                <p>Join twitter today and share knowledge</p>
+                <p class="laser">Join twitter today and share knowledge</p>
                 <img src="Images/MCC (1).png" alt="digital skill" class="puppy">
 
             </div>
